[package]
name = "nimiq-block"
version = "0.1.0"
authors = ["The Nimiq Core Development Team <info@nimiq.com>"]
edition = "2021"
description = "Block primitives to be used in Nimiq's Albatross implementation"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs-albatross"
license = "Apache-2.0"

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
maintenance = { status = "experimental" }

[[bench]]
name = "pk_tree"
harness = false

[[example]]
name = "pk_tree"

[dependencies]
bitflags = "1.0"
byteorder = "1.4"
hex = "0.4"
log = { package = "tracing", version = "0.1", features = ["log"] }
postcard = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

nimiq-bls = { path = "../../bls", features = ["cache", "serde-derive"]}
nimiq-collections = { path = "../../collections" }
nimiq-database-value = { path = "../../database/database-value" }
nimiq-handel = { path = "../../handel" }
nimiq-hash = { path = "../../hash" }
nimiq-hash_derive = { path = "../../hash/hash_derive" }
nimiq-keys = { path = "../../keys" }
nimiq-macros = { path = "../../macros" }
nimiq-network-interface = { path = "../../network-interface" }
nimiq-primitives = { path = "..", features = ["coin", "networks", "policy", "slots"] }
nimiq-transaction = { path = "../transaction" }
nimiq-utils = { path = "../../utils", features = ["merkle"] }
nimiq-vrf = { path = "../../vrf", features = ["serde-derive"] }
nimiq-zkp-primitives = { path = "../../zkp-primitives" }

[dev-dependencies]
bencher = "0.1"
nimiq-test-log = { path = "../../test-log" }
nimiq-test-utils = { path = "../../test-utils" }
num-traits = "0.2"

